--- a/index.html
+++ b/index.html
@@ -1,20 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
-
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
@@ -33,7 +19,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@linusu/flutter-web-auth@0.5.0/dist/flutter_web_auth.js"></script>
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "2167829923";
+    const serviceWorkerVersion = "4294679762";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -50,12 +36,10 @@
         return engineInitializer.initializeEngine();
         }).then(function(appRunner) {
         return appRunner.runApp();
+        }).then(function() {
+          // Initialize flutter_web_auth after the app is loaded
+          window.flutterWebAuth.init();
         });
-    });
-  </script>
-  <script>
-    window.addEventListener("flutter-first-frame", function (event) {
-      window.flutterWebAuth.init();
     });
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
